<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="RtlCompat, spUsage"
    android:background="@color/color_primary"
    tools:context=".ui.users.UserDetailFragment">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        app:srcCompat="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="32dp"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/user_initials"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="32dp"
        tools:text="@string/initials"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/image_circle_backgroud"
        app:layout_constraintTop_toBottomOf="@+id/back_button" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        tools:text="@string/userName"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_initials"/>

    <View
        android:id="@+id/line_break_1"
        android:layout_width="0dp"
        android:layout_height="2dip"
        android:layout_marginTop="10dp"
        android:background="@color/line_break_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <ImageView
        android:id="@+id/make_call_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/send_message_icon"
        app:layout_constraintTop_toBottomOf="@+id/line_break_1"
        android:layout_marginBottom="12dp"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/make_call_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/call"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="@+id/make_call_icon"
        app:layout_constraintEnd_toEndOf="@+id/make_call_icon"
        app:layout_constraintTop_toBottomOf="@+id/make_call_icon" />

    <ImageView
        android:id="@+id/send_message_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_message"
        app:layout_constraintStart_toEndOf="@+id/make_call_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_break_1"
        android:layout_marginBottom="12dp"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/send_message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/text"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="@+id/send_message_icon"
        app:layout_constraintEnd_toEndOf="@+id/send_message_icon"
        app:layout_constraintTop_toBottomOf="@+id/send_message_icon" />

    <View
        android:id="@+id/line_break_2"
        android:layout_width="0dp"
        android:layout_height="2dip"
        android:layout_marginTop="10dp"
        android:background="@color/line_break_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/make_call_text" />

    <ImageView
        android:id="@+id/phone_icon"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/ic_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_break_2"
        android:layout_marginLeft="32dp"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/phone_number_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:drawablePadding="24dp"
        android:layout_marginTop="16dp"
        tools:text="@string/phone_number"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/phone_icon"
        app:layout_constraintTop_toBottomOf="@+id/line_break_2" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="24dp"
        tools:text="@string/gender"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/phone_number_text"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_text" />

    <View
        android:id="@+id/line_break_3"
        android:layout_width="0dp"
        android:layout_height="2dip"
        android:layout_marginTop="10dp"
        android:background="@color/line_break_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <ImageView
        android:id="@+id/location_icon"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        app:srcCompat="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_break_3"
        android:layout_marginLeft="32dp"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/user_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="24dp"
        android:gravity="center_vertical|start"
        android:drawablePadding="8dp"
        tools:text="@string/lagos_nigeria"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/location_icon"
        app:layout_constraintTop_toBottomOf="@+id/line_break_3" />

    <ImageView
        android:id="@+id/email_icon"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_location"
        android:layout_marginLeft="32dp"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="24dp"
        android:gravity="center_vertical|start"
        android:drawablePadding="8dp"
        android:textColor="@color/white"
        android:textSize="15dp"
        tools:text="@string/email"
        app:layout_constraintStart_toEndOf="@+id/email_icon"
        app:layout_constraintTop_toBottomOf="@+id/user_location" />

    <View
        android:id="@+id/line_break_4"
        android:layout_width="0dp"
        android:layout_height="2dip"
        android:layout_marginTop="10dp"
        android:background="@color/line_break_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email" />

    <include
        android:id="@+id/loader"
        layout="@layout/view_loader"
        android:visibility="gone"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>